--- a/revamp/07.2_V_plot-coexpression.Rmd
+++ b/revamp/07.2_V_plot-coexpression.Rmd
@@ -105,17 +105,18 @@ plot_enrich_alt <- function(plot.df,nrow1=FALSE){
   } else{
     plt <- plt + facet_wrap(~threshold)
   }
-  plt <- plt + scale_shape_manual(name="Gene set",values=c(21,22,23,24)) +
+  plt <- plt + 
+    scale_shape_manual(name="Gene set",
+      values=c(21,22,23,24,25,4)) +
     scale_fill_viridis(name="-log10(p)",direction = -1) + 
     ylab("Enrichment") + xlab("Tissue") + 
     theme_bw() + 
     theme(axis.text.x=element_text(size=12,angle=30,vjust=0.5),
           strip.text = element_text(size=12),
           axis.title=element_text(size=12),
-          legend.key.size = unit(1,"line")) + 
-    scale_size(range=c(0.1,10),limits=c(0,250))# + 
-    #coord_flip() + 
-    #theme_bw()
+          legend.key.size = unit(1,"line"),
+          panel.grid = element_blank()) + 
+    scale_size(range=c(1,12),limits=c(0,350))# + 
   return(plt)
 }
 
@@ -162,13 +163,14 @@ ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fou
 
 ```{r}
 
-plt3 <- plot_enrich(w.df2)
+plt3 <- plot_enrich_alt(w.df2)
 ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.png",width=12,height=12)
 ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.pdf",width=12,height=12)
+
 keep.tissues <- c("Islet","Muscle...Skeletal","Liver","Adipose...Subcutaneous")
 sub.df2 <- filter(w.df2,tissue %in% keep.tissues)
 plt4 <- plot_enrich_alt(sub.df2,nrow1=TRUE)
-ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=15,height=7)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=18,height=6)
 ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.pdf",width=15,height=7)
 
 ```
