--- a/revamp/pleiotropy-analyses.Rmd
+++ b/revamp/pleiotropy-analyses.Rmd
@@ -34,55 +34,14 @@ df2 <- fread(analysis.dir%&%"classified-loci_weighted_with-shared.txt")
 ```
 
 
-# Tissue contributions across all loci 
-
 ```{r}
 
-tiss.vec <- c("islet","liver","adipose","muscle","unclassified")
-score.sum <- c(df1$islet %>% sum(.), df1$liver %>% sum(.), df1$adipose %>% sum(.),
-               df1$muscle %>% sum(.),df1$unclassified %>% sum(.))
-score.prop <- score.sum / sum(score.sum)
-assigned_00 <- c((filter(df1,assigned_00=="islet") %>% dim(.))[1],
-                 (filter(df1,assigned_00=="liver") %>% dim(.))[1],
-                 (filter(df1,assigned_00=="adipose") %>% dim(.))[1],
-                 (filter(df1,assigned_00=="muscle") %>% dim(.))[1],
-                 (filter(df1,assigned_00=="unclassified") %>% dim(.))[1])
-assigned_20 <- c((filter(df1,assigned_20=="islet") %>% dim(.))[1],
-                 (filter(df1,assigned_20=="liver") %>% dim(.))[1],
-                 (filter(df1,assigned_20=="adipose") %>% dim(.))[1],
-                 (filter(df1,assigned_20=="muscle") %>% dim(.))[1],
-                 (filter(df1,assigned_20=="unclassified") %>% dim(.))[1])
-assigned_50 <- c((filter(df1,assigned_50=="islet") %>% dim(.))[1],
-                 (filter(df1,assigned_50=="liver") %>% dim(.))[1],
-                 (filter(df1,assigned_50=="adipose") %>% dim(.))[1],
-                 (filter(df1,assigned_50=="muscle") %>% dim(.))[1],
-                 (filter(df1,assigned_50=="unclassified") %>% dim(.))[1])
-assigned_80 <- c((filter(df1,assigned_80=="islet") %>% dim(.))[1],
-                 (filter(df1,assigned_80=="liver") %>% dim(.))[1],
-                 (filter(df1,assigned_80=="adipose") %>% dim(.))[1],
-                 (filter(df1,assigned_80=="muscle") %>% dim(.))[1],
-                 (filter(df1,assigned_80=="unclassified") %>% dim(.))[1])
-
-add.df <- data.frame(tissue=tiss.vec,score.sum,score.prop,assigned_00,
-                     assigned_20,assigned_50,assigned_80,stringsAsFactors = F)
-
-plt <- ggplot(data=add.df,aes(x=tissue,y=score.prop)) + 
-  geom_histogram(stat="identity",color="black",
-                 binwidth=1,size=1,fill=viridis(20)[7]) + 
-  theme_bw()
-
-write.table(add.df,file=analysis.dir%&%"score_sums.txt",sep="\t",quote=F,
-            row.names=F)
-
-ggsave(plot=plt,filename = plot.dir %&%"score_prop.png",height = 3,width=4)
-ggsave(plot=plt,filename = plot.dir %&%"score_prop.pdf",height = 3,width=4)
+(dplyr::select(df2,-contains("assigned_")) %>% arrange(.,desc(islet)) %>% filter(.,islet > 0.9))$symbol %>% unique(.)
+(dplyr::select(df2,-contains("assigned_")) %>% arrange(.,desc(liver)) %>% filter(.,liver > 0.9))$symbol %>% unique(.)
+(dplyr::select(df2,-contains("assigned_")) %>% arrange(.,desc(adipose)) %>% filter(.,adipose > 0.9))$symbol %>% unique(.)
+(dplyr::select(df2,-contains("assigned_")) %>% arrange(.,desc(muscle)) %>% filter(.,muscle > 0.9))$symbol %>% unique(.)
 
 ```
-
-
-
-# Tissue contributions across all loci 
-
 
 
 
