--- a/revamp/07.2_V_plot-coexpression.Rmd
+++ b/revamp/07.2_V_plot-coexpression.Rmd
@@ -96,6 +96,31 @@ plot_enrich <- function(plot.df,nrow1=FALSE){
   return(plt)
 }
 
+
+plot_enrich_alt1 <- function(plot.df){
+  plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
+    geom_point(aes(size=classifer.count,shape=geneset,fill=log_pval),
+               alpha=0.7) 
+
+  plt <- plt + facet_wrap(~threshold)
+  plt <- plt + 
+    scale_shape_manual(name="Gene set",
+      values=c(21,22,23,24,25,4)) +
+    scale_fill_viridis(name="-log10(p)",direction = -1) + 
+    ylab("Enrichment") + xlab("Tissue") + 
+    theme_bw() + 
+    theme(axis.text.x=element_text(size=12,angle=30,vjust=0.5),
+          strip.text = element_text(size=20),
+          axis.title=element_text(size=12),
+          legend.key.size = unit(1,"line")) + 
+          #panel.grid = element_blank()) + 
+    scale_size(range=c(1,12),limits=c(0,350)) + 
+    coord_flip()
+  return(plt)
+}
+
+
+
 plot_enrich_alt <- function(plot.df,nrow1=FALSE){
   plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
     geom_point(aes(size=classifer.count,shape=geneset,fill=log_pval),
@@ -120,6 +145,28 @@ plot_enrich_alt <- function(plot.df,nrow1=FALSE){
   return(plt)
 }
 
+plot_enrich_alt2 <- function(plot.df){
+  plt <- ggplot(data=plot.df,aes(x=tissue,y=enrich.factor)) + 
+    geom_point(aes(size=classifer.count,shape=geneset,fill=log_pval),
+               alpha=0.7) 
+
+  plt <- plt + facet_wrap(~threshold,nrow=1)
+  plt <- plt + 
+    scale_shape_manual(name="Gene set",
+      values=c(21,22,23,24,25,4)) +
+    #scale_fill_continuous(guide = guide_legend(nrow=1)) + 
+    scale_fill_viridis(name="-log10(p)",direction = -1,
+                       guide = guide_legend(nrow=1)) + 
+    ylab("Enrichment") + xlab("Tissue") + 
+    theme_bw() + 
+    theme(axis.text.x=element_text(size=8,angle=30,vjust=0.5),
+          strip.text = element_text(size=10),
+          axis.title=element_text(size=12),
+          legend.key.size = unit(1,"line")) + 
+    scale_size(range=c(1,8),limits=c(0,350)) + 
+    coord_flip() 
+  return(plt)
+}
 
 ```
 
@@ -130,19 +177,11 @@ plot_enrich_alt <- function(plot.df,nrow1=FALSE){
 
 plt1 <- plot_enrich(w.df)
 ggsave(plot=plt1,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding.png",width=12,height=12)
-
-
-```
-
-# Just 0.2 
-
-```{r}
-
-plt1b <- plot_enrich(filter(w.df,threshold==0.20))
-
-ggsave(plot=plt1b,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding20.png",width=6.5,height=9)
-ggsave(plot=plt1b,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding20.pdf",width=6.5,height=9)
-
+pltS <- plot_enrich_alt1(w.df2)
+ggsave(plot=pltS,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.png",
+       width=10,height=15)
+ggsave(plot=pltS,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.pdf",
+       width=10,height=15)
 ```
 
 
@@ -163,16 +202,15 @@ ggsave(plot=plt2,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fou
 
 ```{r}
 
-plt3 <- plot_enrich_alt(w.df2)
-ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.png",width=12,height=12)
-ggsave(plot=plt3,filename = plot.dir %&% "coexpress-enrich_weighted-p10Coding_with-shared.pdf",width=12,height=12)
 
 keep.tissues <- c("Islet","Muscle...Skeletal","Liver","Adipose...Subcutaneous")
 sub.df2 <- filter(w.df2,tissue %in% keep.tissues)
-plt4 <- plot_enrich_alt(sub.df2,nrow1=TRUE)
-ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=18,height=6)
-ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.pdf",width=15,height=7)
-
+sub.df2$tissue <- gsub("Muscle...Skeletal","Muscle",sub.df2$tissue)
+sub.df2$tissue <- gsub("Adipose...Subcutaneous","Adipose",sub.df2$tissue)
+plt4 <- plot_enrich_alt2(sub.df2)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.png",width=8.5,height=2.5)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-shared.pdf",width=8.5,height=2.5)
+ggsave(plot=plt4,filename = plot.dir %&% "coexpress-enrich_weighted-noCoding-fourtiss_with-sharedEXTRA.pdf",width=8.5,height=10)
 ```
 
 
